--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           </div>
           <div class="box2"><p class="box2p">Write your content 
             <div class="usingp">using AI.</div>
-            <img class="imgai" src="assets/images/illustration-ai-content.webp" height="120px" alt="">
+            <img class="imgai" src="illustration-ai-content.webp" height="120px" alt="">
           </p></div>
         </div>
         <div class="plastic2">
